src/objects/Portal_Filter__c.object
<CustomObject>
    <description>Used as default filters per tab for users when the access the To Do portal.</description>
    <fields>
        <fullName>Active_Clients_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Court Dates - Active Clients Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borough__c</fullName>
        <label>Court Dates - Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nassau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of NY State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Putnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suffolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westchester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBO_Start_Date__c</fullName>
        <label>CBO - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Dates - Case Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>To_Dos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Filters</relationshipLabel>
        <relationshipName>Portal_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Court_Date_From__c</fullName>
        <label>Court Dates - Court Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Date_To__c</fullName>
        <label>Court Dates - Court Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Court_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Dates - Court Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>To_Dos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Filter_By__c</fullName>
        <label>Tasks - Filter By</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caseload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Query_From__c</fullName>
        <inlineHelpText>This is the From date field</inlineHelpText>
        <label>Tasks - Query From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Query_To__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Tasks - Query To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tasks_Caseload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasks - Caseload</label>
        <referenceTo>User</referenceTo>
        <relationshipName>To_Dos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tasks_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasks - Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>To_Dos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tasks_To_Do_Selection__c</fullName>
        <label>Tasks - To Do Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tasks_Unit__c</fullName>
        <label>Tasks - Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP Admin Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unverified_Appointments_Caseload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unverified Appointments - Caseload</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Filters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unverified_Appointments_Due_date_from__c</fullName>
        <label>Unverified Appointments - Due date from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unverified_Appointments_Due_date_to__c</fullName>
        <label>Unverified Appointments - Due date to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unverified_Appointments_Filter_By__c</fullName>
        <label>Unverified Appointments - Filter By</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caseload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unverified_Appointments_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unverified Appointments Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unverified_Appointments_Unit__c</fullName>
        <label>Unverified Appointments Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP Admin Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Portal Filter</label>
    <listViews>
        <fullName>All_Portal_Filters</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Query_From__c</columns>
        <columns>Tasks_Staff__c</columns>
        <columns>Unverified_Appointments_Due_date_from__c</columns>
        <columns>Unverified_Appointments_Staff__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Portal Filters</label>
    </listViews>
    <nameField>
        <label>Portal Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>